# percolate-node

./: .gitignore  BUILD.md  CI.md  Claude.md  DOCKER_BUILD.md  PROJECT_SUMMARY.md  Readme.md  SCAFFOLDING_REVIEW.md  SETUP_CI.md  TODO_CI.md  docker-compose.yml  test_parse_integration.py
.github/: SECRETS.md
.github/workflows/: README.md  build-all.yml  build-percolate.yml  build-reading.yml  build-rocks.yml  release-percolate.yml  release-reading.yml  release-rocks.yml
.sample-data/: QUERY-PLANNING-SUMMARY.md  README.md  TESTING-NOTES.md  populate_sample_data.py  sample-document.txt  verify_sample_data.py
.spikes/: BENCHMARK_IMPLEMENTATION.md  README.md  README_BENCHMARKING.md  RUST_VS_PYTHON_COMPARISON.md  RUST_VS_PYTHON_FEATURE_COMPARISON.md
.spikes/percolate-rocks/: CLAUDE.md  Cargo.toml  README.md  REPLICATION.md  impl-plan-01.md
.spikes/percolate-rocks-ref/: 10-rust-rem-implementation.md  11-python-bindings.md  ACTUAL_STATUS.md  BATCH_INSERT.md  BUILD_STATUS.md  CLAUDE.md  CLI_REDESIGN.md  CLI_ROADMAP.md  COMMANDS.md  Cargo.toml  IMPLEMENTATION_STATUS.md  OPENAI_EMBEDDINGS.md  PYPI_READY.md  PYTHON_BINDINGS.md  README.md.old  REM_CONVENTIONS.md  USER_FLOW.md  db-specification-v0.md  pyproject.toml  test-articles.jsonl  test-schema.json  tree.txt
.spikes/percolate-rocks-ref/examples/: basic_usage.py  pypi_demo.py
.spikes/percolate-rocks-ref/python/percolate_rocks/: __init__.py  __init__.pyi
.spikes/percolate-rocks-ref/python/tests/: test_python_bindings.py
.spikes/percolate-rocks-ref/src/: config.rs  lib.rs
.spikes/percolate-rocks-ref/src/bindings/: database.rs  mod.rs
.spikes/percolate-rocks-ref/src/embeddings/: mod.rs  openai.rs
.spikes/percolate-rocks-ref/src/memory/: database.rs  entities.rs  mod.rs  schema.rs
.spikes/percolate-rocks-ref/src/models/: mod.rs
.spikes/percolate-rocks-ref/src/query/: llm.rs  mod.rs  sql.rs
.spikes/percolate-rocks-ref/src/storage/: batch.rs  db.rs  iterator.rs  keys.rs  mod.rs
.spikes/percolate-rocks-ref/src/types/: entity.rs  error.rs  mod.rs
.spikes/percolate-rocks-ref/src/utils/: mod.rs
.spikes/percolate-rocks-ref/tests/: test_database_features.rs  test_embedding_integration.rs
.spikes/percolate-rust/: readme.md
.spikes/platform/: README.md
.spikes/rem-db/: 00 - research-plan.md  01 - problem-set.md  02 - replication.md  README.md  REPLICATION_COMPLETE.md  aggregations-joins.md  analytics-export-strategy.md  changelog.md  datafusion-analysis.md  duckdb-datafusion-strategy.md  pyproject.toml  scenarios.md
.spikes/rem-db/examples/: agentlet_schemas.py  carrier_agentlet_pattern.py  experiment_1_software.py  graph_traversal.py  nested_agentlets.py  populate_problem_set_data.py  query_strategies_demo.py  scenario_queries.py  test_entity_lookup.py  test_nl_query.py  test_nl_simple.py  test_sql_queries.py
.spikes/rem-db/proto/: replication.proto
.spikes/rem-db/src/rem_db/: __init__.py  cli.py  database.py  embeddings.py  graph.py  index.py  llm_query_builder.py  models.py  predicates.py  scenarios.py  schema.py  sql.py  worker.py
.spikes/rem-db/src/rem_db/replicator/: __init__.py  client.py  manager.py  peer.py  replication_pb2.py  replication_pb2_grpc.py  server.py  servicer.py
.spikes/rem-db/tests/: test_basic.py  test_builtin_schemas.py  test_graph_traversal.py  test_nested_schemas.py  test_performance.py  test_query_builder.py  test_replication.py  test_schema_sql.py  test_sql_advanced.py
.spikes/test-openai-embeddings/: test_complete_flow.sh  test_openai.py
docs/: 01-architecture.md  02-rem-memory.md  03-agent-lets.md  03-agentlets.md  04-sync-replication.md  05-sharing-collaboration.md  06-cloud-deployment.md  07-multi-tenant-allocation.md  08-mcp-protocol.md  09-cluster-nodes.md  10-schema-patterns.md
docs/components/: auth-flow.md  memory-engine.md  parsing-pipeline.md  query-layer.md  storage-provider.md
docs/protocols/: README.md  content-headers.md  json-schema-extensions.md
k8s/: INDEX.md  KIND.md  README.md  install.sh  kind-setup.sh  system-v2.md  system.md  test-topology-v2.md  test-topology.md  testing-plan.md
k8s/archive/: system.md
k8s/argocd/: README.md  applicationset.yaml  ingress.yaml  install.yaml  kustomization.yaml
k8s/base/: config.yaml  gateway-deployment.yaml  istio-config.yaml  keda-scaledobjects.yaml  kustomization.yaml  namespace.yaml  nats-statefulset.yaml  openbao-statefulset.yaml  otel-collector.yaml  redis-deployment.yaml
k8s/test-topology/: OBSERVABILITY.md  kind-config.yaml  setup.sh
k8s/test-topology-v2/: OBSERVABILITY.md  kind-config.yaml
percolate/: .env.example  AUTH.md  Dockerfile  PAGINATION_FINAL.md  PAGINATION_SIMPLIFIED.md  PAGINATION_SUMMARY.md  PERCOLATE_ROCKS_INTEGRATION.md  pyproject.toml  test-agent-with-tools.yaml  test-agent.yaml
percolate-reading/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
percolate-reading/docs/: k8s-architecture.md
percolate-reading/src/percolate_reading/: __init__.py  settings.py
percolate-reading/src/percolate_reading/api/: __init__.py  app.py
percolate-reading/src/percolate_reading/cli/: __init__.py  main.py
percolate-reading/src/percolate_reading/providers/: __init__.py  audio.py  base.py  excel.py  image.py  pdf.py
percolate-reading/src/percolate_reading/storage/: __init__.py  fs.py  manager.py  strategies.py
percolate-reading/tests/: test_pdf_parser.py
percolate-rocks/: AGENTLET_FRAMEWORK.md  Cargo.toml  IMPLEMENTATION_COMPLETE.md  ISSUES.md  README.md  build.rs  pyproject.toml
percolate-rocks/.release-notes/: building-and-publishing.md  readme.md  roadmap.md  status.md  v0.1.0-published.md  v0.2.0.md  v0.4.0-diskann-implementation.md
percolate-rocks/docs/: advanced-search.md  opentelemetry-instrumentation.md  parsing.md  rem-dreaming.md  tiered-memory-architecture.md
percolate-rocks/examples/: api_integration.py  quick_test.py  (+1 more)
percolate-rust/: Cargo.toml
percolate-rust/src/embeddings/: mod.rs
percolate-rust/src/memory/: predicates.rs  query.rs
scripts/: README.md  build-docker.sh  bump_version.py  pr.py  test-build-locally.sh
(+347 files in other folders)
