[package]
name = "percolate-rocks"
version = "0.1.0"
edition = "2021"
authors = ["Percolate Team"]
description = "Rust REM database with PyO3 bindings"
license = "MIT"

[lib]
name = "percolate_rocks"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "rem-db"
path = "src/bin/cli.rs"

[dependencies]
# PyO3 bindings
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py38"], optional = true }
pyo3-asyncio = { version = "0.20", features = ["tokio-runtime"], optional = true }
pythonize = { version = "0.20", optional = true }

# Storage
rocksdb = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Embeddings
embed_anything = "0.6"
hnsw_rs = "0.3"
reqwest = { version = "0.12", features = ["json"] }

# Query layer (optional for Phase 3)
sqlparser = { version = "0.47", optional = true }

# Async runtime (for embeddings and replication)
tokio = { version = "1.36", features = ["rt-multi-thread", "macros", "sync"] }

# Replication (optional for Phase 4)
tonic = { version = "0.11", optional = true }
prost = { version = "0.12", optional = true }
tokio-stream = { version = "0.1", optional = true }

# Schema validation
jsonschema = "0.17"
schemars = { version = "0.8", features = ["chrono", "uuid1"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Observability (optional)
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

# Utilities
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "5.5"
blake3 = "1.5"

# CLI
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
tempfile = "3.10"

[build-dependencies]
tonic-build = { version = "0.11", optional = true }

[features]
default = ["pyo3"]
pyo3 = ["dep:pyo3", "pythonize"]
async = ["pyo3-asyncio"]
query = ["sqlparser"]
replication = ["tonic", "prost", "tokio-stream", "tonic-build"]
observability = ["tracing", "tracing-subscriber"]
full = ["pyo3", "async", "query", "replication", "observability"]

# Benchmarks will be added later
# [[bench]]
# name = "entity_operations"
# harness = false

# [[bench]]
# name = "vector_search"
# harness = false
# required-features = ["embeddings"]
