[project]
name = "percolate-rocks"
version = "0.1.0"
description = "Fast REM database with Rust backend"
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-benchmark>=4.0",
    "hypothesis>=6.0",
    "pydantic>=2.0",
]

[tool.maturin]
features = ["pyo3", "async"]
bindings = "pyo3"
module-name = "percolate_rocks._core"
python-source = "python"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["python/tests"]

[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"
